[gd_scene load_steps=3 format=3 uid="uid://ctk7q5u3odhrw"]

[ext_resource type="Script" path="res://main/main.gd" id="1_7vng7"]
[ext_resource type="Texture2D" uid="uid://d0anwa0kjtfpd" path="res://resources/interface/main_background.png" id="2_41thy"]

[node name="main" type="Node2D"]
script = ExtResource("1_7vng7")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_41thy")
expand_mode = 1
stretch_mode = 3

[node name="Options" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="New_Campaign_Button" type="Button" parent="Background/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "New Campaign"

[node name="Continue_Button" type="Button" parent="Background/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
disabled = true
text = "Continue"

[node name="Load_Button" type="Button" parent="Background/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
disabled = true
text = "Load"

[node name="Options_Button" type="Button" parent="Background/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Options"

[node name="Exit_Button" type="Button" parent="Background/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Exit"

[connection signal="pressed" from="Background/Options/New_Campaign_Button" to="." method="_on_new_campaign_button_pressed"]
[connection signal="pressed" from="Background/Options/Continue_Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Background/Options/Load_Button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Background/Options/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Background/Options/Exit_Button" to="." method="_on_exit_button_pressed"]
